# dapt

./: .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  new_file.md  substantive-changes-summary.txt  w3c.json
examples/: audio-multiple-embedded-referenced-source.xml  audio-multiple-external-source.xml  audio-single-embedded-inline-source.xml  audio-single-embedded-referenced-source.xml  audio-single-external-source.xml  bidi-in-p.xml  event-desc-descType.xml  event-desc-multiple-descType.xml  event-desc.xml  intro-original-language-with-dub-language-and-adaptation.xml  intro-original-language-with-dub-language.xml  intro-original-language.xml  intro-script-with-audio-clipped.xml  intro-script-with-embedded-audio.xml  intro-script-with-gain.xml  intro-script-with-speak.xml  intro-times-and-text-with-visual-text.xml  intro-times-and-text.xml  intro-times-only.xml  intro-top-level.xml  metadata-proprietary.xml  metadata-ttml2.xml  non-dapt-div-with-begin-and-lang.xml  non-dapt-divs.xml  sourceMediaIdentifier.xml
profiles/: dapt-content-profile.xml  dapt-processor-profile.xml
registries/: README.md  content-descriptor.json  descType.json
schema-validator/: README.md  pyproject.toml
schema-validator/src/: validate.py
schema-validator/test/: test_validate.py
schema-validator/test/fixtures/: valid_dapt.ttml
xml-schemas/: README.md  dapt-all.xsd  dapt-datatypes.xsd  dapt-metadata.xsd  dapt.xsd  ttml2-animation.xsd  ttml2-content.xsd  ttml2-datatypes.xsd  ttml2-embedded.xsd  ttml2-head.xsd  ttml2-layout.xsd  ttml2-metadata-items.xsd  ttml2-metadata.xsd  ttml2-parameter-attribs.xsd  xlink.xsd  (+1 more)
(+5 files in other folders)
